--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,37 @@
-name: ManuallyDeployToDockerhub
+name: build_and_deploy_to_dockerhub
 
+# Controls when the action will run. 
 on:
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 14.x ]
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
+      
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version:  ${{ matrix.node-version }}
+        
+      - name: Installing project dependencies
+      - run: yarn install
+        
+      - name: Building the project
+      - run: yarn build
+
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Check Out Repo 
         uses: actions/checkout@v2
