--- a/.github/workflows/build_and_deploy_to_dockerhub.yml
+++ b/.github/workflows/build_and_deploy_to_dockerhub.yml
@@ -5,9 +5,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This job builds the frontend
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -28,8 +27,9 @@ jobs:
       - name: Building the project
       - run: yarn build
 
+  # This job builds a docker image and push it to the Docker registry
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: [build]
     steps:
