--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,14 @@ jobs:
         
       - name: Build the project (resulting in a dist directory)
         run: yarn build
-
+      
+      - uses: actions/upload-artifact@v2
+        with:
+          name: dist-artifact
+          path: dist/
+          retention-days: 5
+          if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
+          
   # This job builds a docker image and push it to the Docker registry
   push_to_registry:
     name: Push Docker image to DockerHub
@@ -35,6 +42,11 @@ jobs:
     steps:
       - name: Check Out Repo 
         uses: actions/checkout@v2
+        
+      - name: Get the dist-artefact (dist directory)
+        uses: actions/download-artifact@v2
+        with:
+          name: dist-artifact
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
