--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,7 +47,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist-artifact
+          path: .
 
+      - name: Display structure of downloaded files
+        run: ls -R
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
