--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Build the project (resulting in a dist directory)
         run: yarn build
       
+      - name: Display structure of dist directory
+        run: ls -R dist/
+      
       - uses: actions/upload-artifact@v2
         with:
           name: dist-artifact
@@ -47,7 +50,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist-artifact
-          path: .
 
       - name: Display structure of downloaded files
         run: ls -R
