--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
           retention-days: 5
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
           
-  # This job builds a docker image and push it to the Docker registry
+  # This job builds a docker image and pushes it to the Docker registry
   push_to_registry:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -49,9 +49,6 @@ jobs:
           name: dist-artifact
           path: ./dist/
 
-      - name: Display structure of downloaded files
-        run: ls -R
-        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
